fix: store actual speedup metrics in database and block invalid queries from history