@@ -5,6 +5,7 @@ import java.sql.PreparedStatement;
 import java.sql.Types;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -18,12 +19,6 @@ import com.optimix.optimizer.OptimizationEngine;
 
 import io.javalin.http.Context;
 
-/**
- * Handles query optimization requests.
- *
- * POST /api/optimize  → full optimization (rewrites query, shows all patterns)
- * POST /api/analyze   → dry-run analysis only (issues detected, no rewrite)
- */
 public class OptimizeController {
 
     private static final Logger           log    = LoggerFactory.getLogger(OptimizeController.class);
@@ -41,7 +36,7 @@ public class OptimizeController {
             Long userId = ctx.attribute("userId");
             OptimizationResult result = engine.optimize(req.query.trim(), req.connectionId, userId);
 
-            // Persist to history asynchronously (best-effort, non-fatal)
+            // Persist to history asynchronously
             saveToHistory(userId, req.connectionId, result);
 
             ctx.status(200).json(result);
@@ -52,13 +47,10 @@ public class OptimizeController {
             log.error("Optimization error", e);
 
             String message = e.getMessage();
-
-            // Show real SQL error (like MySQL)
             if (message != null && message.contains("SQL")) {
                 ctx.status(400).json(new ErrorResponse(message));
             } else {
-                ctx.status(500).json(new ErrorResponse(
-                    "Optimization failed. Please try again."));
+                ctx.status(500).json(new ErrorResponse("Optimization failed. Please try again."));
             }
         }
     }
@@ -84,26 +76,38 @@ public class OptimizeController {
     }
 
     private void saveToHistory(long userId, Integer connectionId, OptimizationResult result) {
+        // Professional Guard: Do not save invalid queries (e.g. syntax errors or missing tables) to history
+        if (connectionId != null && result.originalPlan == null) {
+            log.info("Skipping history save: Query was rejected by MySQL (likely invalid syntax or missing table).");
+            return;
+        }
+
         try (Connection conn = DatabaseConfig.getConnection()) {
-            // Note: original_cost / optimized_cost / speedup_factor columns kept in schema
-            // for backwards compatibility but stored as 0 — these were fabricated values.
+            // FIXED: Removed hardcoded 0s and correctly mapped real speedup and cost metrics to the database
             PreparedStatement ps = conn.prepareStatement("""
                 INSERT INTO query_history
                     (user_id, connection_id, original_query, optimized_query,
                      original_cost, optimized_cost, speedup_factor,
                      patterns_applied, index_recommendations)
-                VALUES (?, ?, ?, ?, 0, 0, 0, ?, ?)
+                VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?)
             """);
-            ps.setLong  (1, userId);
+            
+            ps.setLong(1, userId);
             if (connectionId != null) ps.setInt(2, connectionId);
             else ps.setNull(2, Types.INTEGER);
+            
             ps.setString(3, result.originalQuery);
             ps.setString(4, result.optimizedQuery);
+            
+            // Injecting the actual mathematical performance metrics
+            ps.setDouble(5, result.originalCost);
+            ps.setDouble(6, result.optimizedCost);
+            ps.setDouble(7, result.speedupFactor);
 
-            List<String> names = result.patternsApplied.stream()
-                .map(p -> p.patternName).toList();
-            ps.setString(5, mapper.writeValueAsString(names));
-            ps.setString(6, mapper.writeValueAsString(result.indexRecommendations));
+            List<String> names = result.patternsApplied.stream().map(p -> p.patternName).collect(Collectors.toList());
+            ps.setString(8, mapper.writeValueAsString(names));
+            ps.setString(9, mapper.writeValueAsString(result.indexRecommendations));
+            
             ps.executeUpdate();
 
         } catch (Exception e) {
